[package]
name = "hobogo"
version = "0.2.0"
authors = ["Emil Ernerfeldt <emilernerfeldt@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.12.0", features = ["persistence"] }
getrandom = { version = "0.2.3", features = ["js"] }
rand = { version = "0.8.3", features = ['small_rng'] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui_web = "0.12.0"

# Optimize for small code size:
[profile.release]
opt-level = 2
